# differentiator

./: CMakeLists.txt  main.cpp  test.cpp
include/: ConstantExpression.h  CosExpression.h  DivideExpression.h  ExponentExpression.h  Expression.h  LnExpression.h  LogExpression.h  MinusExpression.h  MultiplyExpression.h  Parser.h  PlusExpression.h  PowerExpression.h  SinExpression.h  UnaryMinusExpression.h  ValueExpression.h
src/: ConstantExpression.cpp  CosExpression.cpp  DivideExpression.cpp  ExponentExpression.cpp  LnExpression.cpp  LogExpression.cpp  MinusExpression.cpp  MultiplyExpression.cpp  Parser.cpp  PlusExpression.cpp  PowerExpression.cpp  SinExpression.cpp  UnaryMinusExpression.cpp  ValueExpression.cpp  main.cpp
test/: ConstantExpressionTests.cpp  CosExpressionTests.cpp  DivideExpressionTests.cpp  ExponentExpressionTests.cpp  Integration.cpp  LnExpressionTests.cpp  LogExpressionTests.cpp  MinusExpressionTests.cpp  MultiplyExpressionTests.cpp  PlusExpressionTests.cpp  PowerExpressionTests.cpp  SinExpressionTests.cpp  UnaryMinusExpressionTests.cpp  ValueExpressionTests.cpp
